[package]
name = "vttgrab"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[dependencies.reqwest]
version = "0.11.11"
features = [
    "default-tls",
    "blocking",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "json",
    "multipart",
    "stream",
    "socks",
    "trust-dns"
]
